Fixed few bugs and constraints

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WOB</string>
+    <string name="app_name">WOB_test</string>
     <string name="welcome_text">Which\nOne\'s\nBest?</string>
     <string name="main_title">My WOB</string>
     <string name="adding_button_plus_sign">+</string>
